fix layout issue for datepicker

--- a/app/frontend/less/datepicker.less
+++ b/app/frontend/less/datepicker.less
@@ -10,7 +10,7 @@
 .datepicker {
 	top: 0;
 	left: 0;
-	padding: 4px;
+	padding: 2px;
 	margin-top: 1px;
     border-radius: 4px;
     -moz-border-radius: 4px;
@@ -75,8 +75,8 @@
 		span {
 			display: block;
 			width: 47px;
-			height: 54px;
-			line-height: 54px;
+			height: 35px;
+			line-height: 35px;
 			float: left;
 			margin: 2px;
 			cursor: pointer;
